<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/action_home"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/action_theme"
            android:icon="@drawable/theme"
            android:title="@string/change_theme" />

        <item
            android:id="@+id/action_feedback"
            android:icon="@drawable/review"
            android:title="@string/feedback" />

        <item
            android:id="@+id/action_rate_app"
            android:icon="@drawable/rate"
            android:title="@string/rate" />

        <item
            android:id="@+id/action_more_app"
            android:icon="@drawable/more"
            android:title="@string/more" />

        <item
            android:id="@+id/action_share_app"
            android:icon="@drawable/share"
            android:title="@string/share" />

        <item
            android:id="@+id/action_exit"
            android:icon="@drawable/exit"
            android:title="@string/exit" />

    </group>

</menu>