<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_exit_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            card_view:cardCornerRadius="36dp"
            card_view:cardPreventCornerOverlap="false">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:contentDescription="@string/img_content_description"
                android:src="@mipmap/ic_launcher" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/exit_prompt"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textSize="20sp" />

    </LinearLayout>

    <com.solodroid.ads.sdk.ui.SmallNativeAdView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end">

        <Button
            android:backgroundTint="@android:color/holo_green_light"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/btn_cancel"/>

        <Button
            android:backgroundTint="@android:color/holo_red_light"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:id="@+id/btn_exit"/>

    </LinearLayout>

</LinearLayout>